fixed padding on spacing thead. documented placeholder and title for filters

--- a/src/ap-mesa.css
+++ b/src/ap-mesa.css
@@ -24,7 +24,7 @@
 }
 .mesa-rows-table > thead > tr > th{
   border-width: 0;
-  padding: 0;
+  padding: 0 !important;
 }
 .mesa-rows-table-wrapper {
   overflow: auto;
